--- a/helpdesk_mgmt/views/helpdesk_ticket_views.xml
+++ b/helpdesk_mgmt/views/helpdesk_ticket_views.xml
@@ -156,13 +156,15 @@
                                 groups="base.group_multi_company"
                             />
                             <field name="create_date" readonly="1" />
-                            <field name="channel_id" />
+                            <field name="time_to_respond" widget="float_time" readonly="1" />
+                            <field name="time_to_resolve" widget="float_time" readonly="1" />
                         </group>
                         <group>
                             <field name="partner_id" />
                             <field name="partner_name" />
                             <field name="partner_email" />
                             <field name="category_id" />
+                            <field name="channel_id" />
                             <field
                                 name="tag_ids"
                                 widget="many2many_tags"
@@ -209,7 +211,8 @@
                 <field name="stage_id" />
                 <field name="priority" widget="priority" />
                 <field name="create_date" readonly="1" />
-                <field name="last_stage_update" />
+                <field name="time_to_respond" widget="float_time"/>
+                <field name="time_to_resolve" widget="float_time" />
             </tree>
         </field>
     </record>
