--- a/helpdesk_mgmt/views/helpdesk_ticket_views.xml
+++ b/helpdesk_mgmt/views/helpdesk_ticket_views.xml
@@ -120,7 +120,7 @@
                         type="object"
                         attrs="{'invisible' : [('user_id', '!=', False)]}"
                     />
-                    <field name="stage_id" widget="statusbar" clickable="True" />
+                    <field name="stage_id" widget="statusbar" clickable="1" />
                 </header>
                 <sheet>
                     <widget
